--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {background-color:#ffe8f6}
 table {
+  position: center;
   font-family: 'Lucida Bright';
   border-collapse: collapse;
   width: 65%;
@@ -14,15 +15,18 @@ tr:nth-child(odd) {
   background-color: #dba7b5;
 }
 p {
+  position: center;
   font-family: 'Lucida Bright';
   text-align: justify;
   width: 65%;
 }
 h1 {
-    font-family: 'Lucida Bright'; 
-    color:#301324
+  position: center sticky;
+  font-family: 'Lucida Bright'; 
+  color:#301324
 }
 h2 {
-    font-family: 'Lucida Sans Unicode'; 
-    color:#6e2f52
+  position: center;
+  font-family: 'Lucida Sans Unicode'; 
+  color:#6e2f52
 }
