--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ h2 {
 .sticky {
   position: sticky;
   top: 0;
-  padding: 5px;
-  background-color: #6e2f52;
+  background-color: #dba7b5;
   text-align: center;
 }
