--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ table {
   font-family: 'Lucida Bright';
   border-collapse: collapse;
   width: 70%
+  margin-top: 20px;
 }
 td, th {
   border: 1px solid #6e2f52;
