--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+/*Home*/
+.jumbotron {
+  background-image: url(back.jpg);
+  background-size: cover;
+  text-align: center;
+  height: 800px;
+  margin-top: -120px;
+}
+.jumbotron .display-4 {
+  color: #240006;
+  margin-top: 200px;
+}
+.jumbotron p {
+  color: #170007;
+  text-align: center;
+}
+.jumbotron .btn {
+  background-color: #ad5767;
+  border: none;
+  border-radius: 30px;
+  margin-top: 20px;
+  font-size: 20px;
+}
+
+/*Profile*/
 body {background-color:#ffe8f6}
 table {
   font-family: 'Lucida Bright';
